--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.4",
-    "expo": "~39.0.2",
-    "expo-status-bar": "~1.0.2",
+    "expo": "^40.0.0",
+    "expo-background-fetch": "~8.6.0",
+    "expo-constants": "^9.3.5",
+    "expo-notifications": "~0.8.2",
+    "expo-status-bar": "~1.0.3",
+    "expo-task-manager": "~8.6.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-datepicker": "^1.7.2",
     "react-native-paper": "^4.4.1",
     "react-native-web": "~0.13.12"
