--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-datepicker": "^1.7.2",
     "react-native-paper": "^4.4.1",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "undefined-is-a-function": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
