--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.4",
+    "@react-native-community/datetimepicker": "^3.4.7",
+    "axios": "^0.21.1",
     "expo": "^40.0.0",
     "expo-background-fetch": "~8.6.0",
     "expo-constants": "^9.3.5",
     "expo-notifications": "~0.8.2",
+    "expo-permissions": "~10.0.0",
+    "expo-server-sdk": "^3.6.0",
     "expo-status-bar": "~1.0.3",
     "expo-task-manager": "~8.6.0",
     "react": "16.13.1",
